added option to export predictions as numpy

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,47 +65,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bayes.load('models/bayesian/params/mnist_train/mnist_train_ep004')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# bayes.load_predict_export('mnist_train', mnist_train, 100, 'mnist_train_train')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Predicting batch 468 of 469\r"
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\params\\mnist_train\\mnist_train_ep000'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\predictions\\mnist_train_train\\mnist_train_ep000'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\params\\mnist_train\\mnist_train_ep001'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\predictions\\mnist_train_train\\mnist_train_ep001'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\params\\mnist_train\\mnist_train_ep002'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\predictions\\mnist_train_train\\mnist_train_ep002'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\params\\mnist_train\\mnist_train_ep003'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\predictions\\mnist_train_train\\mnist_train_ep003'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\params\\mnist_train\\mnist_train_ep004'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\bayesian\\predictions\\mnist_train_train\\mnist_train_ep004'\n",
+      "---------------\n",
+      "Done!\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.8842)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "bayes.accuracy(mnist_train, 10)"
+    "bayes.load_predict_export('mnist_train', mnist_train, 100, 'mnist_train_train')"
    ]
   },
   {
@@ -117,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +132,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\params\\mnist_train\\mnist_train_ep000'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\predictions\\mnist_train_train\\mnist_train_ep000'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\params\\mnist_train\\mnist_train_ep001'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\predictions\\mnist_train_train\\mnist_train_ep001'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\params\\mnist_train\\mnist_train_ep002'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\predictions\\mnist_train_train\\mnist_train_ep002'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\params\\mnist_train\\mnist_train_ep003'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\predictions\\mnist_train_train\\mnist_train_ep003'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\params\\mnist_train\\mnist_train_ep004'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\vae\\predictions\\mnist_train_train\\mnist_train_ep004'\n",
+      "---------------\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "vae.load_predict_export('mnist_train', mnist_train, 100, 'mnist_train_train')"
    ]
@@ -161,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,12 +198,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\params\\mnist_train\\mnist_train_ep000'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\predictions\\mnist_train_train\\mnist_train_ep000'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\params\\mnist_train\\mnist_train_ep001'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\predictions\\mnist_train_train\\mnist_train_ep001'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\params\\mnist_train\\mnist_train_ep002'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\predictions\\mnist_train_train\\mnist_train_ep002'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\params\\mnist_train\\mnist_train_ep003'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\predictions\\mnist_train_train\\mnist_train_ep003'\n",
+      "---------------\n",
+      "Loading parameters from 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\params\\mnist_train\\mnist_train_ep004'\n",
+      "Saving predictions to 'D:\\Dokumente\\Dissertation\\Code\\python\\samplednn\\models\\dropout\\predictions\\mnist_train_train\\mnist_train_ep004'\n",
+      "---------------\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "dropout.load_predict_export('mnist_train', mnist_train, 100, 'mnist_train_train')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
